[tool.poetry]
name = "satellitemap-space-calendar"
version = "0.0.1"
description = "Create a list of events with Satelite passing above"
authors = ["artickl <artem.zavyalov@gmail.com>"]
readme = "README.md"
packages = [{include = "satellitemap"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
urllib3 = "^2.0.3"
simplejson = "^3.19.1"
pandas = "^2.0.3"
folium = "^0.14.0"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
sklearn = "^0.0.post7"
scipy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
